Bugs fixed